--- a/grocery-lists/1.md
+++ b/grocery-lists/1.md
@@ -691,3 +691,66 @@ honey
 water
 wine
 gluten-free beers
+
+
+http://www.healthytippingpoint.com/2011/02/eat-in-challenge-shopping-cart-trader-joes.html
+
+
+## Produce
+
+Organic broccoli (times two)
+
+Conventional pineapple
+
+Organic bananas
+
+Organic spring mix
+
+Organic spinach
+
+Organic carrots
+
+Conventional onion
+
+Conventional potatoes
+
+Organic apples
+
+Conventional cabbage
+
+
+## Vegetarian Protein Sources
+
+Almonds
+
+Sunflower seeds
+
+Sunflower butter
+
+Chickpeas
+
+Refried Beans
+
+Kidney beans
+
+Organic eggs
+
+
+## Dairy/Dairy-Like Stuff
+Crumbled goat cheese
+
+Rice Milk
+
+Soy Milk Creamer
+
+## Dry Stuff
+
+Cornbread mix
+
+Organic cereal
+
+Ezekiel Bread
+
+Artichoke
+
+Gnocchi
