--- a/grocery-lists/3.md
+++ b/grocery-lists/3.md
@@ -193,3 +193,46 @@ Unsalted peanuts
 Chinese black vinegar
 Sesame oil
 Pineapple rings
+
+## Pantry Ingredients:
+Ketchup
+Cornstarch
+White vinegar
+Garlic salt
+Chicken broth cubes
+Ground ginger
+White rice
+Rice vinegar
+Soy sauce
+Cocoa powder
+Chocolate chips
+Flour
+Sugar
+Peanut butter
+Honey
+Pancake syrup
+Oatmeal
+Brown sugar
+Salt
+Cheerios
+Canola oil
+
+===
+https://savorandsavvy.com/2013/12/27-dollar-grocery-challenge.html
+27 dollar grocery challenge
+1 lb. Bag of rice
+1 lb. Ground Sausage
+Shredded Mozzarella Cheese
+3 lb. Bag of potatoes
+1 white onion
+Flour Tortillas
+Cheese (sliced)
+2 pkgs. Butter
+Pancake mix
+2 cans tomato sauce
+1 can corn
+1 can pineapple
+2 lbs chicken thighs
+1 gallon milk
+Bread
+Eggs
