--- a/data/Grocery/2.md
+++ b/data/Grocery/2.md
@@ -1,4 +1,4 @@
-## 19 Gluten-Free Foods Shopping List
+## 19 Gluten-Free Foods Shopping List (Moved to json GL#7)
 https://skinnyms.com/19-gluten-free-foods-shopping-list/
 ```
 Beans
