--- a/data/Grocery/4.md
+++ b/data/Grocery/4.md
@@ -1,27 +1,36 @@
+
+
+
+## Shopping List: Basic Ingredients for a Healthy Kitchen
 https://www.cancer.org/healthy/eat-healthy-get-active/eat-healthy/shopping-list-basic-ingredients-for-a-healthy-kitchen.html
-
-Shopping List: Basic Ingredients for a Healthy Kitchen
-
+```
 Beans: Black
  pinto
   kidney
  chickpeas
   lentils
    refried
+```
+```   
 Rice: Brown
  long-grain rice mixes
+ ```
+ ```
 Pasta: Whole-wheat spaghetti
  fettuccini
   penne
    bowtie
     ramen noodles
+```
+```    
 Other grains: Couscous
  orzo
   cornmeal
    whole-wheat crackers
     breadsticks
      bread crumbs
-
+```
+```
 Onions
 Canned tomatoes: Diced
  whole
@@ -29,52 +38,61 @@ Canned tomatoes: Diced
    sun-dried
     sauce
      salsa
-
+```
+```
 Canned vegetables: Mixed vegetables
  green beans
   mushrooms
-
+```
+```
 Canned and dried fruits:
 Applesauce (unsweetened)
  raisins
   dates
-
+```
+```
 Sauces:
  Pasta
  pizza
   tomato-look for varieties that contain no or very little added sugar
-
+```
+```
 Soups:
 Canned soups
  broth
   bouillon
   dried soup
-
+```
+```
 Meats:
 Canned tuna
  salmon
   minced clams
-
+```
+```
 Peanut butter
 Low-fat or no-fat evaporated milk
-
+```
+```
 Vinegars:
  Cider
   red wine
   white wine
    balsamic
+```
 
 Your favorite herbs and spices
-
+```
 Oils:
  Olive
   canola
    peanut
     non-fat cooking spray
-
+```
 
 
 ## Vegetables and fruits
+```
 Low-fat milk or non-fat milk and yogurt (without added sugar)
 Reduced-fat cheeses:
    Cheddar
@@ -83,24 +101,27 @@ Reduced-fat cheeses:
    Monterey Jack
     cottage
      Parmesan
-
+```
 Reduced-fat sour cream and cream cheese
 Whole-wheat and corn tortillas
 Eggs
 Minced garlic
-
+```
 Sauces:
  Worcestershire
   soy
   teriyaki
    chili
+   ```
+   ```
 Ketchup and mustard (spicy and Dijon)
 Salad dressings with olive oil or reduced-fat
 Sparkling water
-
+```
 
 
 ## Frozen vegetables and fruits
+```
 Frozen chopped onions
 Frozen chopped green, red, or yellow pepper
 Breads:
@@ -117,11 +138,12 @@ Fish:
   cod
   flounder
   sole
+```
 
-
-  =====
+---  
 
 ##  19 items you need on your next grocery list
+```
 Quinoa
 Kale
 Eggs
@@ -141,9 +163,11 @@ Apples
  Coconut Oil
  Olive oil
  Vinegar
+```
 
 ## 14 Grocery Staples I Always Have as a 20-Something on a Budget
 https://www.popsugar.com/food/Best-Grocery-List-Someone-Budget-37283083?stream_view=1#photo-37283101
+```
 Eggs
 Spinach
 Apples
@@ -158,11 +182,11 @@ Coffee
 Chickpeas and Other Canned Beans
 Dark Chocolate
 Quinoa and Brown Rice
-
+```
 
 ##  BUILDING A HEALTHY VEGAN GROCERY LIST
 http://www.ilovevegan.com/resources/building-a-healthy-vegan-grocery-list/
-
+```
 FRUITS
   FRESH
     Apples
@@ -204,7 +228,8 @@ FRUITS
     Figs
     Apple slices
     Banana chips
-
+```
+```
 VEGETABLES
     FRESH (RAW & COOKING)
       Broccoli
@@ -241,10 +266,10 @@ VEGETABLES
       Peas
       Edamame
       Stir-fry mixes
-
+```
 
 GRAINS, BEANS & LEGUMES
-
+```
   100% WHOLE WHEAT
     Bread
     Tortillas
@@ -287,8 +312,8 @@ GRAINS, BEANS & LEGUMES
     Olives
     Hummus
 
-
-
+```
+```
 OILS
   Coconut oil
   Flax seed oil
@@ -312,10 +337,10 @@ NUTS & SEEDS
   Ground flax seeds
   Sesame seeds
   Tahini (sesame butter)
-
+```
 
 NON-DAIRY PRODUCTS
-
+```
   MILK
     Soy milk
     Almond milk
@@ -335,10 +360,10 @@ NON-DAIRY PRODUCTS
     Vegan cheese shreds/slices
     Vegan cream cheese
     Nutritional yeast
-
+```
 
 VEGAN PANTRY
-
+```
   SWEETENERS
     Organic cane sugar
     Agave syrup
@@ -350,8 +375,8 @@ VEGAN PANTRY
     Dried fruits
     Dark chocolate chips
     Stevia
-
-
+```
+```
   FLAVOURS, HERBS, & SPICES
 
     Basil
@@ -363,7 +388,8 @@ VEGAN PANTRY
     Cinnamon
     Salt
     Pepper
-
+```
+```
   CONDIMENTS
     Salsa
     Hummus
@@ -375,7 +401,8 @@ VEGAN PANTRY
     Nutritional yeast
     Lemon/lime juice
     Vinegar (white, balsamic
-
+```
+```
   COOKING & BAKING
     Whole grain flour
     Baking powder
@@ -386,3 +413,4 @@ VEGAN PANTRY
     Earth Balance Butter
     Ground flax seed
     Yeast
+```
