--- a/data/Grocery/3.md
+++ b/data/Grocery/3.md
@@ -1,6 +1,12 @@
+---
+id: gs-list-3
+title: additional grocery lists
+sidebar_label: GL. Part3
+---
+
 A Healthy Diet For $20 A Week list
 https://www.frugalfarmwife.com/article/a-healthy-diet-for-20-00-a-week/
-
+```
 Eggs, 2 1/2 dozen
 Potatoes, 10 lbs
 Carrots, 2lbs
@@ -17,7 +23,7 @@ Bananas
 Butter, 1lb
 Frozen veggies, 3 bags
 Oatmeal, 1 carton
-
+```
 =============
 
 Also a meal plan here
@@ -25,16 +31,16 @@ https://growingslower.com/budget-grocery-list/
 ## 1-Week Healthy Budget Grocery List
 
 #### Fruit
-
+```
 4 pounds Apples
 6 pounds Bananas
 1 pound Blueberries, frozen
 2 1/2 pounds Any In-Season Fruit (aim for $1.50/lb)
 2 Lemons
 6 oz Raisins
-
+```
 #### Vegetables
-
+```
 4 Avocados
 1/3 pound Broccoli, frozen organic
 4 pounds Carrots, organic
@@ -54,18 +60,18 @@ https://growingslower.com/budget-grocery-list/
 1/2 pound Zucchini
 1 6-oz can Olives, sliced
 1 pound Onion, yellow
-
+```
 #### Grains
-
+```
 11 6-inch Corn Tortillas
 22 Slices Bread, gluten free
 2 pounds Brown Rice Flour, organic
 1/2 pound Cornmeal, organic
 5 1/2 pounds Oats, gluten free
 2 pounds Brown Rice, gluten free organic
-
+```
 #### Protein
-
+```
 3/4 pound Almonds
 3/4 pound Black Beans, dry organic
 1 can Salmon
@@ -77,15 +83,17 @@ https://growingslower.com/budget-grocery-list/
 2/3 pound Red Beans, dry organic
 4 1/2 fl oz Peanut Butter, natural
 1 6-oz pack Pepperoni
-
+```
 #### Dairy
+```
 1/3 pound Butter
 2 pounds Cheddar Cheese
 10 oz Mozzarella Cheese
 3 1/2 gallons Milk
 1 8-oz yogurt (hint: a larger container may be cheaper than the 8 oz)
-
+```
 #### Pantry
+```
 2 tsp Baking Powder
 1/2 tsp Baking Soda
 2 Tb Basil
@@ -108,11 +116,11 @@ https://growingslower.com/budget-grocery-list/
 2 tsp Vanilla
 1 tsp Xanthan Gum
 1 Tb Yeast
+```
 
-
-The FITNESS Dollar Menu: Budget-Friendly Groceries
+## The FITNESS Dollar Menu: Budget-Friendly Groceries
 https://www.fitnessmagazine.com/recipes/healthy-eating/smart-shopping/the-fitness-dollar-menu-budget-friendly-groceries/?page=1
-
+```
 Oats
 Eggs
 Potatoes
@@ -123,10 +131,11 @@ Broccoli
 Beets
 Whole-Grain Pasta
 Spinach
-
+```
 
 ## Healthy Diet: Vegetarian Paleo Shopping List
 https://foodtolive.com/healthy-blog/ultimate-healthy-diet-vegetarian-paleo-shopping-list/
+```
 Hemp seeds
 Spinach
 Avocadoes
@@ -136,11 +145,12 @@ Almonds
 Pistachios
 Walnuts
 Eggs (optional)
-
+```
 
 ---
 https://www.outofmilk.com/ideas/single-guys/
 ESSENTIAL GROCERIES FOR SINGLE GUYS
+```
 Raw nuts
 Canned tomatoes
 Frozen fruit
@@ -154,7 +164,8 @@ Oranges
 Broccoli
 Apples
 Carrots
-
+```
+```
 Granola bars
 Dark chocolate
 Dried pasta
@@ -166,12 +177,12 @@ Yoghurt
 Cheese
 Bread
 Milk
-
+```
 ---
-grocery budget for 4 people
+## grocery budget for 4 people
 
 https://www.busybudgeter.com/our-70week-grocery-budget-for-4-people-20-min-meals-breakfast-lunch-and-dinner-includes-grocery-list-and-price-list/
-
+```
 Bananas
 Eggs
 Milk
@@ -193,8 +204,10 @@ Unsalted peanuts
 Chinese black vinegar
 Sesame oil
 Pineapple rings
+```
 
 ## Pantry Ingredients:
+```
 Ketchup
 Cornstarch
 White vinegar
@@ -216,10 +229,14 @@ Brown sugar
 Salt
 Cheerios
 Canola oil
+```
 
-===
+---
+
+
+## 27 dollar grocery challenge
 https://savorandsavvy.com/2013/12/27-dollar-grocery-challenge.html
-27 dollar grocery challenge
+```
 1 lb. Bag of rice
 1 lb. Ground Sausage
 Shredded Mozzarella Cheese
@@ -236,3 +253,4 @@ Pancake mix
 1 gallon milk
 Bread
 Eggs
+```
