--- a/data/Grocery/md/1.md
+++ b/data/Grocery/md/1.md
@@ -1,7 +1,6 @@
 
-
+#### First Vegan Grocery List
 https://www.vegan-nutritionista.com/first-vegan-grocery-list.html
-First Vegan Grocery List
 
 ```
 1. Steel cut oats or oat bran
@@ -266,7 +265,7 @@ Apple or Pear
 ```
 
 
-============
+---
 
 4.
 ```
@@ -390,9 +389,9 @@ http://www.healthytippingpoint.com/2011/02/eat-in-challenge-shopping-cart-trader
 http://www.healthytippingpoint.com/2012/02/my-favorite-trader-joes-products.html
 ```
 
+---
 
-
-7. http://frugalinsa.com/basic-grocery-list/
+#### 7. http://frugalinsa.com/basic-grocery-list/
 ```
 **Staples**
 
@@ -549,10 +548,10 @@ Jelly
 Biscuits
 ```
 
+---
 
 
-
-8. https://www.self.com/story/heres-how-i-spent-40-at-trader-joes-and-ate-healthy-for-a-week
+#### 8. https://www.self.com/story/heres-how-i-spent-40-at-trader-joes-and-ate-healthy-for-a-week
 ```
 16-oz. bag small whole green lentils ($1.69)
 32-oz. bag brown basmati rice ($3.29)
@@ -576,9 +575,9 @@ Biscuits
 18-oz. container organic multigrain hot cereal ($2.49)
 ```
 
+---
 
-
-9. http://www.health.com/health/article/0,,20409813,00.html
+#### 9. http://www.health.com/health/article/0,,20409813,00.html
 ```
 **Breads and grains:**
 Small bagels
@@ -654,7 +653,7 @@ Ground flaxseed
 http://www.eatright.org/resource/health/diseases-and-conditions/celiac-disease/the-gluten-free-diet-building-the-grocery-list
 The Gluten-Free Diet
 
-## Grains and flours
+#### Grains and flours
 ```
 ice
 wild rice
@@ -675,7 +674,7 @@ Indian ricegrass
 uncontaminated oats (labeled as gluten-free oats).
 ```
 
-## Other
+#### Other
 ```
 milk
 non-fat dry milk
@@ -684,7 +683,7 @@ fresh fruits
 vegetables
 ```
 
-## single ingredient Foods
+#### single ingredient Foods
 ```
 butter
 eggs
@@ -703,7 +702,7 @@ gluten-free beers
 http://www.healthytippingpoint.com/2011/02/eat-in-challenge-shopping-cart-trader-joes.html
 
 
-## Produce
+#### Produce
 ```
 Organic broccoli (times two)
 
@@ -726,7 +725,7 @@ Organic apples
 Conventional cabbage
 ```
 
-## Vegetarian Protein Sources
+#### Vegetarian Protein Sources
 ```
 Almonds
 
@@ -743,7 +742,7 @@ Kidney beans
 Organic eggs
 ```
 
-## Dairy/Dairy-Like Stuff
+#### Dairy/Dairy-Like Stuff
 ```
 Crumbled goat cheese
 
@@ -751,7 +750,7 @@ Rice Milk
 
 Soy Milk Creamer
 ```
-## Dry Stuff
+#### Dry Stuff
 ```
 Cornbread mix
 
