--- a/data/Grocery/md/3.md
+++ b/data/Grocery/md/3.md
@@ -1,10 +1,5 @@
----
-id: gs-list-3
-title: additional grocery lists
-sidebar_label: GL. Part3
----
 
-A Healthy Diet For $20 A Week list
+#### A Healthy Diet For $20 A Week list
 https://www.frugalfarmwife.com/article/a-healthy-diet-for-20-00-a-week/
 ```
 Eggs, 2 1/2 dozen
@@ -24,11 +19,12 @@ Butter, 1lb
 Frozen veggies, 3 bags
 Oatmeal, 1 carton
 ```
-=============
 
+---
+
+## 1-Week Healthy Budget Grocery List
 Also a meal plan here
 https://growingslower.com/budget-grocery-list/
-## 1-Week Healthy Budget Grocery List
 
 #### Fruit
 ```
@@ -118,7 +114,7 @@ https://growingslower.com/budget-grocery-list/
 1 Tb Yeast
 ```
 
-## The FITNESS Dollar Menu: Budget-Friendly Groceries
+#### The FITNESS Dollar Menu: Budget-Friendly Groceries
 https://www.fitnessmagazine.com/recipes/healthy-eating/smart-shopping/the-fitness-dollar-menu-budget-friendly-groceries/?page=1
 ```
 Oats
@@ -133,7 +129,7 @@ Whole-Grain Pasta
 Spinach
 ```
 
-## Healthy Diet: Vegetarian Paleo Shopping List
+#### Healthy Diet: Vegetarian Paleo Shopping List
 https://foodtolive.com/healthy-blog/ultimate-healthy-diet-vegetarian-paleo-shopping-list/
 ```
 Hemp seeds
@@ -148,8 +144,9 @@ Eggs (optional)
 ```
 
 ---
+
+#### ESSENTIAL GROCERIES FOR SINGLE GUYS
 https://www.outofmilk.com/ideas/single-guys/
-ESSENTIAL GROCERIES FOR SINGLE GUYS
 ```
 Raw nuts
 Canned tomatoes
@@ -178,8 +175,10 @@ Cheese
 Bread
 Milk
 ```
+
 ---
-## grocery budget for 4 people
+
+#### grocery budget for 4 people
 
 https://www.busybudgeter.com/our-70week-grocery-budget-for-4-people-20-min-meals-breakfast-lunch-and-dinner-includes-grocery-list-and-price-list/
 ```
@@ -206,7 +205,7 @@ Sesame oil
 Pineapple rings
 ```
 
-## Pantry Ingredients:
+#### Pantry Ingredients:
 ```
 Ketchup
 Cornstarch
@@ -234,7 +233,7 @@ Canola oil
 ---
 
 
-## 27 dollar grocery challenge
+#### 27 dollar grocery challenge
 https://savorandsavvy.com/2013/12/27-dollar-grocery-challenge.html
 ```
 1 lb. Bag of rice
