--- a/data/Grocery/md/4.md
+++ b/data/Grocery/md/4.md
@@ -1,7 +1,7 @@
 
 
 
-## Shopping List: Basic Ingredients for a Healthy Kitchen
+#### Shopping List: Basic Ingredients for a Healthy Kitchen
 https://www.cancer.org/healthy/eat-healthy-get-active/eat-healthy/shopping-list-basic-ingredients-for-a-healthy-kitchen.html
 ```
 Beans: Black
@@ -91,7 +91,7 @@ Oils:
 ```
 
 
-## Vegetables and fruits
+#### Vegetables and fruits
 ```
 Low-fat milk or non-fat milk and yogurt (without added sugar)
 Reduced-fat cheeses:
@@ -102,10 +102,12 @@ Reduced-fat cheeses:
     cottage
      Parmesan
 ```
+```
 Reduced-fat sour cream and cream cheese
 Whole-wheat and corn tortillas
 Eggs
 Minced garlic
+```
 ```
 Sauces:
  Worcestershire
@@ -120,7 +122,7 @@ Sparkling water
 ```
 
 
-## Frozen vegetables and fruits
+#### Frozen vegetables and fruits
 ```
 Frozen chopped onions
 Frozen chopped green, red, or yellow pepper
@@ -142,7 +144,7 @@ Fish:
 
 ---  
 
-##  19 items you need on your next grocery list
+####  19 items you need on your next grocery list
 ```
 Quinoa
 Kale
@@ -165,7 +167,7 @@ Apples
  Vinegar
 ```
 
-## 14 Grocery Staples I Always Have as a 20-Something on a Budget
+#### 14 Grocery Staples I Always Have as a 20-Something on a Budget
 https://www.popsugar.com/food/Best-Grocery-List-Someone-Budget-37283083?stream_view=1#photo-37283101
 ```
 Eggs
@@ -184,7 +186,7 @@ Dark Chocolate
 Quinoa and Brown Rice
 ```
 
-##  BUILDING A HEALTHY VEGAN GROCERY LIST
+####  BUILDING A HEALTHY VEGAN GROCERY LIST
 http://www.ilovevegan.com/resources/building-a-healthy-vegan-grocery-list/
 ```
 FRUITS
@@ -268,7 +270,7 @@ VEGETABLES
       Stir-fry mixes
 ```
 
-GRAINS, BEANS & LEGUMES
+#### GRAINS, BEANS & LEGUMES
 ```
   100% WHOLE WHEAT
     Bread
@@ -339,7 +341,7 @@ NUTS & SEEDS
   Tahini (sesame butter)
 ```
 
-NON-DAIRY PRODUCTS
+#### NON-DAIRY PRODUCTS
 ```
   MILK
     Soy milk
@@ -362,7 +364,7 @@ NON-DAIRY PRODUCTS
     Nutritional yeast
 ```
 
-VEGAN PANTRY
+#### VEGAN PANTRY
 ```
   SWEETENERS
     Organic cane sugar
