--- a/data/Grocery/md/2.md
+++ b/data/Grocery/md/2.md
@@ -1,5 +1,5 @@
 
-## 19 Gluten-Free Foods Shopping List (Moved to json GL#7)
+#### 19 Gluten-Free Foods Shopping List (Moved to json GL#7)
 https://skinnyms.com/19-gluten-free-foods-shopping-list/
 ```
 Beans
@@ -24,10 +24,13 @@ Milk
 Cheese
 ```
 
-Dr. Oz's 21-Day Weight-Loss Breakthrough Shopping List
+---
+
+
+#### Dr. Oz's 21-Day Weight-Loss Breakthrough Shopping List
 https://www.goodhousekeeping.com/health/diet-nutrition/a47187/21-day-weight-loss-breakthrough-shopping-list/
 
-## Produce
+#### Produce
 ```
 - Blueberries (1 cup)
 - Raspberries (½ cup)
@@ -58,20 +61,20 @@ https://www.goodhousekeeping.com/health/diet-nutrition/a47187/21-day-weight-loss
 - 6 to 8 onions
 - 1 bunch scallions
 ```
-Herbs:
+#### Herbs:
 ```
 - mint,
 - rosemary,
 - thyme,
 - and cilantro (1 bunch each)
 ```
-## Dairy
+#### Dairy
 ```
 - 2% milk (1½ cups)
 - 1% milk or soy milk (3 cups)
 - Plain 2% Greek yogurt (2 cups)
 ```
-## Meat, Fish and Soy Proteins
+#### Meat, Fish and Soy Proteins
 ```
 - 2 (4-oz) boneless skinless chicken breasts
 - 2 (4-oz) skinless salmon fillets
@@ -79,7 +82,7 @@ Herbs:
 - 1 (14-oz) package extra-firm tofu
 - 1 lb. silken soft tofu
 ```
-## Grocery Items
+#### Grocery Items
 ```
 - 1 (14.5-oz) can no-salt-added diced tomatoes
 - 1 can chipotle chile in adobo
@@ -92,7 +95,7 @@ Herbs:
 - Hummus, for snacks
 - Nut butter, for snacks
 ```
-## OILS, VINEGAR AND CONDIMENTS
+#### OILS, VINEGAR AND CONDIMENTS
 ```
 - Extra-virgin olive oil
 - Toasted sesame oil
@@ -102,7 +105,7 @@ Herbs:
 - Dijon mustard
 - Green curry paste (Look for this in the international or Asian foods aisle.)
 ```
-## Spices
+#### Spices
 ```
 - Chili powder
 - Dried thyme
@@ -111,19 +114,20 @@ Herbs:
 - Cinnamon stick
 - Pure vanilla extract
 ```
-## Nuts and Seeds
+#### Nuts and Seeds
 ```
 - Almonds, for snacks
 - Pumpkin seeds
 - Sunflower seeds
 - Walnuts
 ```
-=====
 
-Dr. Oz’s Rapid Weight-Loss Plan Shopping List
+---
+
+#### Dr. Oz’s Rapid Weight-Loss Plan Shopping List
 https://www.doctoroz.com/article/rapid-weight-loss-plan-shopping-list
 
-## Shopping List
+#### Shopping List
 ```
 - Rice protein powder (28 tablespoons)
 - 1 3/4 cups ground flaxseeds
@@ -135,7 +139,7 @@ https://www.doctoroz.com/article/rapid-weight-loss-plan-shopping-list
 - Baking soda
 ```
 
-## Each week buy (for a total of two weeks):
+#### Each week buy (for a total of two weeks):
 ```
 - 4 lemons
 - 4 bananas
@@ -146,7 +150,7 @@ https://www.doctoroz.com/article/rapid-weight-loss-plan-shopping-list
 - 1 1/2 lbs chicken, turkey or fish combined
 ```
 
-## Detox Vegetable Broth Ingredients
+#### Detox Vegetable Broth Ingredients
 ```
 - 4 large onions
 - 4 cups winter squash
